--- a/Workshop2 (2).html
+++ b/Workshop2 (2).html
@@ -6,12 +6,11 @@
         <meta name="description" content="Thomas">
         <meta name="keyword" content="HTML">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudglare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <marquee><a rel="nofollow" href="http://www.youtube.com/">for more information</a></marquee>
     </head>
     <body>
-        <h1>jujuuj</h1>
         <nav>
             <li><a href="intro">Intro</a></li>
             <li><a href="education">Education</a></li>
