--- a/Workshop2.html
+++ b/Workshop2.html
@@ -7,7 +7,7 @@
      <meta name="keyword" content="HTML">
      <meta name="viewport" content="width=device-width,initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudglare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <marquee><a rel="nofollow" href="http://www.youtube.com/">for more information</a></marquee>
      </head>
 <body>
@@ -31,6 +31,7 @@
 <td>2001-2003</td>
 <td>Ideal Model school</td>
 </tr>
+<a href="#" class=" fa fa-facebook"></a> 
 </table>
 <a href="https://en.wikipedia.org/wiki/Thomas_J._Watson">About Thomas</a>
 
